# lighter-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.md
src/: app.rs  core.rs  elements.rs  error.rs  lib.rs  log.rs  main.rs  prelude.rs  render.rs  types.rs  window.rs
src/core/: app.rs  application.rs  arena.rs  cx.rs  dirty.rs  engine.rs  error.rs  event.rs  interaction.rs  layout.rs  node.rs  reactive.rs  render.rs  signal.rs  style.rs  tree.rs  window.rs
src/core/app/: engine.rs  window.rs
src/core/app/engine/: trace.rs
src/core/arena/: node.rs  tree.rs
src/core/event/: hit_test.rs
src/core/layout/: engine.rs  types.rs
src/core/layout/types/: alignment.rs  dimension.rs  flex.rs  insets.rs  point.rs  rect.rs  size.rs
src/core/reactive/: bind.rs  cx.rs  dirty.rs  runtime.rs  signal.rs
src/core/render/: d2d.rs  piet.rs  tinyskia.rs
src/core/render/d2d/: cache.rs  types.rs
src/elements/: div.rs  text.rs
src/elements/div/: props.rs  style.rs
src/elements/text/: props.rs  style.rs  textcontent.rs
