[package]
name = "lighter"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
slotmap = "1.1.1"
smallvec = "1.15.1"
taffy = "0.9.2"
thiserror = "2.0.18"
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls", # TODO: Remove
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging"
] }
windows-numerics = "0.3.1"
windows-result = "0.4.1"
